client/src/App.css
body {
  width: 100vw;
  height: 100vh;
  margin: 0;
  padding: 0;
}

.App {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  min-height: 60vh;
}

#game {
  display: flex;
  flex-grow: 2;
  flex-direction: row;

  @media screen and (max-width: 650px) {
    flex-direction: column;
  }
}

#lobby {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

#field {
  background-color: #545652;
  padding: 2%;
  margin: 0 1%;
  flex-grow: 3;
  min-width: 40vw;

  @media screen and (max-width: 650px) {
    min-width: 95%;
  }
}

ul, menu, li {
  text-decoration: none;
  list-style: none;
  margin: 0;
  padding: 1% 0;
}

.host, .join {
  text-align: center;
}

button {
  color: #EEE;
  background-color: #333;
  width: 15vw;
  height: 3.5vh;
  border-radius: 8px;

  @media screen and (max-width: 650px) {
    width: 40vw;
    height: 6vh;
  }
}

input {
  width: 20vw;
  height: 3vh;

  @media screen and (max-width: 650px) {
    width: 90%;
    height: 5vh;
  }
}

#chat, #playerList {
  
  background-color: #545652;
  min-height: 10vh;
  max-height: 15vh;
  overflow: scroll;
  overflow-x: hidden;
  padding: 1%;
  width: 95%;

  @media screen and (min-width: 650px) {
    max-width: 45vw;
  }
}

#chat, #playerList > li {
  padding: 0 2%;
  
}

.user {
  background-color: #333;
  border-radius: 8px;
  padding: 0 2%;
}

.check {
  float: right;
  margin: 0 0 0 2%;
  padding: 0 2%;
  background-color: #333;
  border-radius: 8px;
}

.kick {
  width: auto;
  height: inherit;
  float: right;

  @media screen and (max-width: 650px) {
    height: 4vh;
  }
}

.paper {
  display: flex;
  flex-direction: column;
  align-items: center;
  border: dotted 2px black;
  margin: 1%;
}

